--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <li class="event">
             <span class="duration">2018 - till date</span>
            <div class="content">
-            <h3>Bsc. Civil and Environmental Engineering</h3>
+            <h3>Bsc. Civil Engineering</h3>
             <p class="subtitle"><em>University of Lagos</em></p>
          
            </div>
